--- a/p4.md
+++ b/p4.md
@@ -6,7 +6,14 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor
 
 ## Introduction
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat tortor eu risus lacinia condimentum. In molestie eget enim at pharetra. Mauris sed hendrerit felis, eu cursus est. Integer euismod laoreet ante, a maximus leo pretium vel. Nullam cursus elit et laoreet convallis. Ut commodo gravida eros, vel iaculis libero maximus vel. Donec malesuada ornare lorem, at lacinia diam mollis ac. Pellentesque hendrerit mauris purus, in cursus justo ullamcorper ac. Mauris faucibus, velit eget gravida posuere, quam felis vestibulum tellus, vitae placerat dolor purus fringilla justo. Nullam sodales ex eget augue tincidunt, vel aliquet dui placerat. Vestibulum a ligula non orci dapibus pretium. Sed et pulvinar ipsum, quis gravida diam. Pellentesque non neque mi. Vivamus quis fringilla nibh.
+Alberta Wildflowers is a guide to identify, learn and share Alberta’s 100+ species of wildflowers. Enjoy all the familiarities of a traditional paper field guide, with more images and species information. Foster a community via the app, where users can share sightings, images and connect with each other.
+
+Plants can be identified by either searching key plant characteristics (color, petal shape, etc) and location or by using our automatic photo recognition system. A user will be able to easily search through images to find a wildflower and any information related to it that they are looking for. Pictures taken and information about a plant’s location/characteristics can be shared with others by pinpointing sightings on a global map. This is a great feature for finding rarer species. 
+
+This app is targeted to anyone interested in identifying wildflowers in Alberta. The text descriptions are easy enough for a beginner to understand but with the option to expand for more detailed scientific information for more advanced users.
+
+Take this app out on an evening stroll in a nearby field or on a hike in one of Alberta’s national parks. With internet connection, you can share and update sighting locations on a map in real time, and use our automatic recognition tools. Or use the app offline with the searching key tool. People of all ages and backgrounds can enjoy and learn about Alberta’s stunning collection of wildflowers with this app.
+
 
 ## Design Problem
 
